[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/DropSheet.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/DropMoney.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 5 )

[sub_resource type="Animation" id=2]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1 ) ]
}

[node name="DropMoney" type="Area2D"]
z_index = 3
collision_layer = 64
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3
vframes = 4
frame = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "MoneyWiggle"
anims/MoneyWiggle = SubResource( 2 )

[node name="TimerInitial" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="TimerHide" type="Timer" parent="."]

[node name="TimerShow" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="TimerInitial" to="." method="_on_TimerInitial_timeout"]
[connection signal="timeout" from="TimerHide" to="." method="_on_TimerHide_timeout"]
[connection signal="timeout" from="TimerShow" to="." method="_on_TimerShow_timeout"]
